--- a/package.json
+++ b/package.json
@@ -47,20 +47,22 @@
 	"bugs": {
 		"url": "https://github.com/typematter/cache/issues"
 	},
+	"dependencies": {
+		"@neophi/sieve-cache": "^1.5.0"
+	},
 	"devDependencies": {
 		"@eslint/js": "^9.14.0",
-		"@neophi/sieve-cache": "^1.5.0",
-		"@types/node": "^22.8.7",
-		"@typescript-eslint/eslint-plugin": "^8.12.2",
-		"@typescript-eslint/parser": "^8.12.2",
+		"@types/node": "^22.9.0",
+		"@typescript-eslint/eslint-plugin": "^8.13.0",
+		"@typescript-eslint/parser": "^8.13.0",
 		"eslint": "^9.14.0",
 		"eslint-config-prettier": "^9.1.0",
-		"globals": "^15.11.0",
+		"globals": "^15.12.0",
 		"prettier": "^3.3.3",
 		"tslib": "^2.8.1",
 		"tsup": "^8.3.5",
 		"typescript": "^5.6.3",
-		"typescript-eslint": "^8.12.2",
+		"typescript-eslint": "^8.13.0",
 		"vitest": "^2.1.4"
 	}
 }
